fix gap at mobile

--- a/src/scss/pages/_api.scss
+++ b/src/scss/pages/_api.scss
@@ -45,7 +45,7 @@
     margin-left: -15px;
     height:50px;
     z-index:9;
-    top:65px;
+    top:64px;
   }
   .api-content {
     padding-top:40px;
